--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,11 +7,11 @@ AllCops:
   NewCops: enable
   TargetRubyVersion: 2.7
   Exclude:
-    - 'lib/rodash.rb'
+    - 'lib/rordash.rb'
     - 'vendor/bundle/**/*'
     - 'gemfiles/vendor/bundle/**/*'
     - 'bin/*'
-    - 'rodash.gemspec'
+    - 'rordash.gemspec'
 
 Style/Documentation:
   Enabled: false
